more Italian translations

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -17,11 +17,11 @@
 #
 
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci postazione risorsa manuale
+INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci ubicazione risorsa manualmente
 
-RE-IMPORT\ THIS\ BRANCH=Reimporta questo ramo
+RE-IMPORT\ THIS\ BRANCH=Importa nuovamente questo ramo
 
-RE-IMPORT\ THIS\ SESSION=Reimporta questa sessione
+RE-IMPORT\ THIS\ SESSION=Importa nuovamente questa sessione
 
 IMPORT\ BRANCH=Importa ramo
 
@@ -35,17 +35,17 @@ SHOW\ HIDDEN\ FILES=Mostra file nascosti
 
 ADD\ WORKING\ DIRECTORY=Aggiungi cartella di lavoro
 
-REMOVE\ REMOTE\ LOCATION=Rimuovi postazione remota
+REMOVE\ REMOTE\ LOCATION=Rimuovi ubicazione remota
 
-ADD\ DEFAULT\ LOCATIONS=Aggiungi postazioni di default
+ADD\ DEFAULT\ LOCATIONS=Aggiungi ubicazioni di default
 
-THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le postazioni di default esistono gi\u00e0 e non verranno aggiunte nuovamente
+THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le ubicazioni di default esistono gi\u00e0 e non verranno aggiunte nuovamente
 
-ADD\ DEFAULT\ REMOTE\ LOCATIONS=Aggiungi postazioni remote di default
+ADD\ DEFAULT\ REMOTE\ LOCATIONS=Aggiungi ubicazioni remote di default
 
 ADD\ TO\ TREE\ ROOT=Aggiungi alla radice dell'albero
 
-ADD\ REMOTE\ LOCATION=Aggiungi postazione remota
+ADD\ REMOTE\ LOCATION=Aggiungi ubicazione remota
 
 HISTORY=Cronologia
 
@@ -75,7 +75,7 @@ NO\ NODE\ SELECTED=Nessun nodo selezionato
 
 DELETE=Elimina
 
-VIEW/EDIT\ SELECTED=Visualizza/modifica nodo/i selezionato/i
+VIEW/EDIT\ SELECTED=Visualizza/modifica elemento/i selezionato/i
 
 VIEW\ IN\ LONG\ FIELD\ EDITOR=Visualizza con editor di testo lungo
 
@@ -119,13 +119,13 @@ SHORT\ CUT\ KEYS=Tasti di scelta rapida
 
 CHECK\ FOR\ UPDATES=Verifica aggiornamenti
 
-VIEW\ ERROR\ LOG=Visualizza log degli errori
+VIEW\ ERROR\ LOG=Visualizza registro degli errori
 
 ARBIL\ FORUM\ (WEBSITE)=Forum (sito Web)
 
 YES=s\u00ec
 
-RUN\ SETUP\ WIZARD=Esegui procedura guidata
+RUN\ SETUP\ WIZARD=Esegui procedura guidata di configurazione
 
 ABOUT=Informazioni su
 
@@ -139,13 +139,13 @@ CLOSE\ ALL\ WINDOWS=Chiudi tutte le finestre
 
 RESET\ WINDOWS=Reimposta finestre
 
-RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Reimpostare misura e postazione di default di tutte le finestre?
+RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Reimpostare misura e ubicazione di default di tutte le finestre?
 
-RESET\ WINDOW\ LOCATIONS=Reimposta postazione finestre
+RESET\ WINDOW\ LOCATIONS=Reimposta ubicazione finestre
 
 WINDOW=Finestra
 
-PLUGINLIST\ NOT\ FOUND=Elenco dei plugin non trovato
+PLUGINLIST\ NOT\ FOUND=Nessuna lista di plugin trovata
 
 PLUGIN\ ERROR=Errore di plugin
 
@@ -159,7 +159,7 @@ SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
 TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che tutti i file locali di metadati siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull'albero.
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che, quando caricati, tutti i file locali di metadati siano compatibili con il formato XML. Se il file di metadati non viene convalidato secondo lo schema, verr\u00e0 evidenziato di rosso sull'albero del corpus.
 
 ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre la conformit\u00e0 dei file locali di metadati con il formato XML 
 
@@ -169,7 +169,7 @@ THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHO
 
 CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=Verifica autorizzazioni per risorse remote
 
-WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una nuova risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua postazione corrente. Questa opzione pu\u00f2 nettamente migliorare l'uso del disco se si usano file di grande formato.
+WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una nuova risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua ubicazione corrente. Questa opzione pu\u00f2 nettamente migliorare l'uso del disco se si usano file di grande formato.
 
 COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copia nuove risorse nella cache 
 
@@ -229,15 +229,15 @@ SAVE\ CHANGES=Salva modifiche
 
 FILE=File
 
-PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Visualizza log degli errori per maggiori dettagli.
+PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Visualizza registro degli errori per maggiori dettagli.
 
 ERROR=Errore
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore di I/O durante la lettura del sistema di Guida! Visualizza log degli errori per maggiori dettagli.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore di I/O durante la lettura del sistema di Guida! Visualizza registro degli errori per maggiori dettagli.
 
 EXPORT\ FAILED=Esportazione non riuscita
 
-EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Visualizza log degli errori per maggiori dettagli. 
+EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Visualizza registro degli errori per maggiori dettagli. 
 
 EXPORT\ IMDI\ TO\ HTML=Esporta IMDI in HTML
 
@@ -249,7 +249,7 @@ VIEW\ XML=Visualizza XML
 
 OPEN\ IN\ EXTERNAL\ APPLICATION=Apri in applicazione esterna
 
-OVERRIDE\ TYPE\ CHECKER\ DECISION=Disabilita decisione del type checking
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Disabilita decisione del type checker
 
 SAVE\ CHANGES\ TO\ DISK=Salva modifiche su disco
 
@@ -282,17 +282,17 @@ REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Elimina i nodi selezionati dal nodo padre
 JUMP\ TO\ IN\ TREE=Visualizza sull'albero
 SHOW\ CONTEXT=Mostra contesto
 SELECT\ MATCHING\ ROWS=Seleziona righe corrispondenti
-ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, visualizza log degli errori nel menu Guida per maggiori informazioni.
-SHOW\ LOG\ CONSOLE=Mostra console del log
-LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La console del log non \u00e8 disponibile quando si utilizza la versione web start
+ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, visualizza registro degli errori nel menu Guida per maggiori informazioni.
+SHOW\ LOG\ CONSOLE=Mostra console del registro
+LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La console del registro non \u00e8 disponibile quando si utilizza la versione web start
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Se selezionato, l'albero del corpus seguir\u00e0 la struttura dei documenti CMDI senza unire n\u00e9 compattare
 LANGUAGE\ SELECTION=Selezione lingua
 PLEASE\ RESTART\ THE\ APPLICATION\ FOR\ THE\ LANGUAGE\ SELECTION\ TO\ BECOME\ VISIBLE=Riavviare l'applicazione per rendere visibile la selezione della lingua
-PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Selezionare la lingua preferita
+PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Selezionare la lingua desiderata
 SELECT\ LANGUAGE=Seleziona lingua
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Mostra struttura XML verbatim nell'albero per CMDI
 SYSTEM\ DEFAULT=Predefinita del sistema
-MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Il modo in cui i documenti di metadati vengono visualizzati sull'albero \u00e8 stato modificato.\nTutti i nodi attualmente caricati verranno salvati e ricaricati. Si desidera continuare?\n
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Il layout dei documenti di metadati sull'albero \u00e8 stato modificato.\nTutti i nodi attualmente caricati verranno salvati e ricaricati. Si desidera continuare?\n
 MENU_INCREASE_FONT_SIZE=Carattere pi\u00f9 grande
 MENU_DECREASE_FONT_SIZE=Carattere pi\u00f9 piccolo
 MENU_RESET_FONT_SIZE=Reimposta dimensione carattere
