--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
@@ -17,9 +17,9 @@
 #
 
 THE\ METADATA\ FILE\ COULD\ NOT\ BE\ OPENED=Impossibile aprire i file di metadati
-CMDI\ SCHEMA\ LOCATION=Postazione schema CMDI
+CMDI\ SCHEMA\ LOCATION=Ubicazione schema CMDI
 COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=Impossibile trovare l'URL dello schema, alcuni nodi non verranno visualizzati correttamente. 
-LOAD\ IMDI\ FILES=Carica file IMDI
+LOAD\ IMDI\ FILES=Carica i file IMDI
 A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Un attributo DOM ID \u00e8 stato trovato in uno o pi\u00f9 file, tali file dovranno essere salvati per correggere il problema.
 INSERT\ FROM\ TEMPLATE=Inserisci da modello
 ERROR\ READING\ TEMPLATE=Errore durante la lettura del modello
@@ -38,7 +38,7 @@ NEW\ RESOURCES\ IN\ %S=Nuove risorse in {0}
 THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=Non esiste nessun vocabolario controllato per le risorse scritte o i file multimediali che corrisponda a "{0}".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=Il file potrebbe non essere archiviabile. Si pu\u00f2 comunque procedere selezionando manualmente il tipo di risorsa.
 DO\ YOU\ WANT\ TO\ PROCEED?=Si desidera continuare?
-WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=AVVISO: L'operazione non garantisce che i dati possano essere caricati sul server del corpus!
+WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=AVVISO: L'operazione non garantisce il caricamento dei dati sul server del corpus!
 ERROR\ READING\ VIA\ THE\ IMDI\ API=Errore nella lettura con IMDI API
 MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Sostituito manualmente (possibile incompatibili\u00e0 con l'archivio)
 CANCEL=Annulla
@@ -47,28 +47,28 @@ OVERRIDE\ TYPE\ CHECKER\ DECISION=Ignora decisione del type checker
 ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura di uno dei link con IMDI API
 GET\ LINKS=Ottieni link
 ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura dei link con IMDI API
-REMOVE\ IMDI\ LINKS=Rimuovi link IMDI
-COPY\ IMDI\ FILE=Copia file IMDI
-ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore nella lettura con IMDI API. Vedi log degli errori per maggiori dettagli.
+REMOVE\ IMDI\ LINKS=Rimuovi i link IMDI
+COPY\ IMDI\ FILE=Copia i file IMDI
+ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore nella lettura con IMDI API. Vedi registro degli errori per maggiori dettagli.
 ADD\ LINK=Aggiungi link
 #{0} is the file name of the template that could not be opened
-COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Impossibile aprire il file modello richiesto: {0}. Vedi log degli errori per maggiori dettagli
+COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Impossibile aprire il file modello richiesto: {0}. Vedi registro degli errori per maggiori dettagli
 LOAD\ TEMPLATE=Carica modello
 THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=Impossibile leggere il modello richiesto.
-DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Categoria dati: <{0}>. Nessuna descrizione disponibile. Vedi log degli errori per maggiori dettagli.
+DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Categoria dati: <{0}>. Nessuna descrizione disponibile. Vedi registro degli errori per maggiori dettagli.
 #{0} is the name of a field (e.g. Actor name) that has no usage description
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Nessuna descrizione di utilizzo trovata in questo modello per: {0}
 #{0} is the filename of the template
-COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Impossibile leggere il file del modello richiesto: {0}. Vedi log degli errori per maggiori dettagli
+COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Impossibile leggere il file del modello richiesto: {0}. Vedi registro degli errori per maggiori dettagli
 LOAD\ CLARIN\ TEMPLATE=Carica modello Clarin
 FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Impossibile rimuovere il proxy risorsa con id {0}
-UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relazione imprevista tra percorso di origine e di destinazione. Vedi log degli errori per maggiori dettagli.
+UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relazione imprevista tra percorso di origine e di destinazione. Vedi registro degli errori per maggiori dettagli.
 INSERT\ NODE=Inserisci nodo
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Impossibile leggere lo schema XML
 ERROR\ INSERTING\ NODE=Errore durante l'inserimento del nodo
 NO\ TEMPLATE\ FOUND\ FOR=Nessun modello trovato per: {0}
 #{0} is the location of the current project, {1} is the location of the project to be switched to
-CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Spostamento del progetto attuale da:\n{0}\na:\n{1}
+CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Spostamento del progetto corrente da:\n{0}\na:\n{1}
 ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil dovr\u00e0 chiudere tutte le tabelle una volta spostati i file.\nSi desidera continuare?
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Errore nel salvataggio della configurazione in {0}
