checked the first part of the widgets and changed some words

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -95,7 +95,7 @@ CLEAR\ CELL\ HIGHLIGHT=Rimuovi evidenziatura dalle celle
 
 HIGHLIGHT\ MATCHING\ CELLS=Evidenzia celle corrispondenti
 
-COPY\ CELL\ TO\ WHOLE\ COLUMN=Copia cella nell'intera colonna
+COPY\ CELL\ TO\ WHOLE\ COLUMN=Copia cella in tutte le righe della colonna
 
 CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=Impossibile copiare questo tipo di campo
 
