--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -25,10 +25,10 @@ SESSION=Sessione
 \ (LOADING)=\ (caricamento in corso)
 OTHER=Altro
 DELETE\ NODE=Elimina nodo
-ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione del nodo, vedi log degli errori nel menu Guida per maggiori informazioni.
-FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile caricare {0} postazioni. Vedi log degli errori per maggiori dettagli.
+ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione del nodo, vedi registro degli errori nel menu Guida per maggiori informazioni.
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile caricare {0} ubicazioni. Vedi registro degli errori per maggiori dettagli.
 ERROR=Errore
-COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Impossibile trovare o caricare le postazioni. Verranno aggiunte le postazioni di default.
+COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Impossibile trovare o caricare le ubicazioni. Verranno aggiunte le ubicazioni di default.
 FAVOURITES=Preferiti
 WORKING\ DIRECTORIES=Cartelle di lavoro
 REMOTE\ CORPUS=Corpus remoto
@@ -38,8 +38,8 @@ FILES=File
 REMEMBER\ MY\ CHOICE=Ricorda la scelta
 \ FORMATTED=\ formattato
 VIEW\ IMDI\ XML=Visualizza IMDI in XML
-THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=Il nodo dev'essere salvato prima di proseguire.\nSalvare ora?
-FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=Impossibile aprire la postazione remota: {0}
+THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=Il nodo dev'essere salvato per poter proseguire.\nSalvare ora?
+FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=Impossibile aprire l'ubicazione remota: {0}
 OPEN\ IN\ EXTERNAL\ APPLICATION=Apri in applicazione esterna
 FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=Impossibile aprire il file. Controllare che sia accessibile e che sia associato a un'applicazione.\n\nAprire la cartella padre?
 FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=Impossibile trovare il file: {0}
@@ -47,18 +47,18 @@ SELECTION=Selezione
 DIRECTORIES=Cartelle
 METADATA\ FILES=File di metadati
 THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=La cartella di destinazione non \u00e8 vuota. Durante l'esportazione si dovr\u00e0\ndecidere se sostituire o creare duplicati di eventuali file presenti.\nContinuare?
-THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=La cartella di destinazione \n"{0}"\nnon esiste.\nSelezionare o creare una cartella.
+THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=La cartella di destinazione \n"{0}"\nnon esiste.\nSelezionare una cartella o crearne una nuova.
 \ DESTINATION\ DIRECTORY=Cartella di destinazione
 SAVE\ CHANGES=Salva modifiche
 THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Alcune modifiche non sono state salvate.\nSalvare ora?
-ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore durante la visualizzazione della licenza. Vedi log degli errori per maggiori dettagli.
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore durante la visualizzazione della licenza. Vedi registro degli errori per maggiori dettagli.
 LICENSE=Licenza
 ABOUT\ {0}=Informazioni su {0}
 CLOSE=Chiudi
 DISPLAY\ LICENSE=Visualizza licenza
 ABOUTBOXTEXT=Archive Builder\nUno strumento locale per l''organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata e sviluppata da Peter Withers\nMantenimento ed estensioni a cura di Peter Withers & Twan Goosen\nArbil si serve inoltre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {0} {1} {2}\n{3}\nData di compilazione: {4}\n\nVersione Java: {5}\nFornitore: {6}\nJVM: {7} {8}\nSistema operativo: {9} {10} {11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nSeleziona Visualizza licenza per vedere la versione completa della licenza.
 SAVE\ TO\ DISK?=Salvare su disco?
-FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Impossibile caricare {0} postazioni. Vedi log degli errori per maggiori dettagli.
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Impossibile caricare {0} ubicazioni. Vedi registro degli errori per maggiori dettagli.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Tutte le modifiche a {0} ancora in sospeso veranno salvate. Continuare?
 FIELD\ NAME=Nome campo
 VALUE=Valore
@@ -67,7 +67,7 @@ NOT\ SUPPORTED=Non supportato
 MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Trasferimento dei metadati IMDI ai file di metadati CMDI attualmente non supportato
 INSERT\ NODE\ ERROR=Errore durante l'inserimento del nodo
 ERROR\ MOVING\ NODES=Errore nello spostamento dei nodi
-COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Impossibile spostare {0} a causa di un errore. Vedi log degli errori per maggiori dettagli. Continuare lo spostamento dei nodi? 
+COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Impossibile spostare {0} a causa di un errore. Vedi registro degli errori per maggiori dettagli. Continuare lo spostamento dei nodi? 
 CANCEL=Annulla
 ABORT=Interrompi
 SKIP=Salta
@@ -77,10 +77,10 @@ MOVE_SOURCE_NODE_TO_TARGET_NODE=Spostare {0} in {1}?
 SELECT\ EXPORT\ DESTINATION=Seleziona destinazione esportazione
 SELECT\ NODES\ TO\ EXPORT=Seleziona nodi da esportare
 NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=Nessun nodo selezionato. Selezionare almeno un nodo da esportare.
-AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Errore durante l''esportazione dei preferiti:\n{0}\nVedi log degli errori per maggiori dettagli.
+AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Errore durante l''esportazione dei preferiti:\n{0}\nVedi registro degli errori per maggiori dettagli.
 EXPORT\ COMPLETE=Esportazione completata
 FAVOURITES\ HAVE\ BEEN\ EXPORTED=Esportazione dei preferiti avvenuta con successo
-FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Errore durante l''importazione dei preferiti:\n{0}\nVedi log degli errori per maggiori dettagli.
+FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Errore durante l''importazione dei preferiti:\n{0}\nVedi registro degli errori per maggiori dettagli.
 IMPORT\ COMPLETE=Importazione completata
 FAVOURITES\ HAVE\ BEEN\ IMPORTED=Importazione dei preferiti avvenuta con successo
 EXPORT\ SELECTION=Esporta selezione
@@ -102,28 +102,28 @@ INITIALIZING...=inizializzazione in corso...
 FINISH=Fine
 ARBIL\ WIZARD=Procedura guidata di Arbil
 DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Sei sicuro di voler annullare la procedura guidata?
-ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Errore nel testo della procedura guidata. Vedi log degli errori per maggiori dettagli.
+ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Errore nel testo della procedura guidata. Vedi registro degli errori per maggiori dettagli.
 SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Seleziona preferiti esportati da importare
 FAVOURITES\ EXPORT\ FILE=File dei preferiti esportati
-FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Seleziona uno o pi\u00f9 preferiti da esportare dalla lista sottostante, clicca su 'Esporta'. Seleziona la cartella di destinazione dove esportare i preferiti selezionati.\n\nSuggerimento: puoi utilizzare i tasti di modifica sulla tastiera per selezionare o deselezionare individualmente i preferiti (CTRL o CMD), o per selezionarne una serie (SHIFT).\n
+FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Seleziona uno o pi\u00f9 preferiti da esportare dalla lista sottostante, clicca su Esporta. Seleziona la cartella di destinazione dove esportare i preferiti selezionati.\n\nSuggerimento: puoi utilizzare i tasti di modifica sulla tastiera per selezionare o deselezionare individualmente i preferiti (CTRL o CMD), o per selezionarne una serie (SHIFT).\n
 DISCARD\ CHANGES=Ignora modifiche
-DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=L'elenco delle postazioni remote verr\u00e0 ripristinato. Tornare al passaggio precedente della procedura guidata?
-SETUP_NO\ LOCATIONS\ SPECIFIED=Nessuna postazione specificata
-SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stata specificata nessuna postazione. Sei sicuro di voler continuare?
+DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=L'elenco delle ubicazioni remote verr\u00e0 ripristinato. Tornare al passaggio precedente della procedura guidata?
+SETUP_NO\ LOCATIONS\ SPECIFIED=Nessuna ubicazione specificata
+SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stata specificata nessuna ubicazione. Sei sicuro di voler continuare?
 SETUP_SELECT\ A\ METADATA\ FORMAT=Seleziona un formato per i metadati
 SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Seleziona almeno una delle opzioni prima di continuare
 SETUP_NO\ PROFILES\ SELECTED=Nessuno profilo selezionato
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stato selezionato nessun profilo. Sei sicuro di voler continuare?
 SETUP_CLARIN\ PROFILES=Profili Clarin
 CANCEL\ WIZARD=Annulla procedura guidata
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostra solo campi selezionati (tutti gli altri verranno nascosti e l'opzione 'nascondi campi' ignorata)
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostra solo i campi selezionati (tutti gli altri verranno nascosti e l'opzione nascondi campi verr\u00e0 ignorata)
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Larghezza non valida per colonna {0}
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Larghezza colonna
 FIELD_VIEW_TABLE_HIDE=Nascondi
 FIELD_VIEW_TABLE_SHOW\ ONLY=Mostra solo
 FIELD_VIEW_TABLE_COLUMN\ NAME=Nome colonna
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Nascondi campi selezionati (attivo solo quando l'opzione 'Mostra solo' non \u00e8 stata selezionata)
-ARBIL\ LOG\ CONSOLE=Console del log di Arbil
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Nascondi i campi selezionati (attivo solo quando l'opzione Mostra solo non \u00e8 stata selezionata)
+ARBIL\ LOG\ CONSOLE=Console del registro di Arbil
 SEARCH_STOP=interrompi
 SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=cercato: {0}/{1} trovato: {2}
 SEARCH\ CANCELED=ricerca annullata
@@ -146,7 +146,7 @@ NO\ ROWS\ SELECTED=Nessuna riga selezionata
 PASTE\ INTO\ TABLE=Incolla nella tabella
 TABLE\ COPY=Copia della tabella
 NOTHING\ SELECTED\ TO\ COPY=Nessun elemento selezionato per la copia
-COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Impossibile impostare gli attributi per il nuovo campo. Vedi log degli errori per maggiori dettagli
+COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Impossibile impostare gli attributi per il nuovo campo. Vedi registro degli errori per maggiori dettagli
 ERROR\ WHILE\ SETTING\ ATTRIBUTES\ ON\ FIELD=Errore durante l'impostazione degli attributi del campo
 THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=Il nodo ''{0}'' non pu\u00f2 contenere un campo dello stesso tipo di ''{1}'' in ''{2}''
 COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile creare il campo. Vedi log degli errori per maggiori dettagli.
