finished to check the Italian translation

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -159,9 +159,9 @@ SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
 TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che, quando caricati, tutti i file locali di metadati siano compatibili con il formato XML. Se il file di metadati non viene convalidato secondo lo schema, verr\u00e0 evidenziato di rosso sull'albero del corpus.
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che, quando caricati, tutti i file di metadati locali siano compatibili con il formato XML. Se il file di metadati non viene convalidato secondo lo schema, verr\u00e0 evidenziato di rosso sull'albero del corpus.
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre la conformit\u00e0 dei file locali di metadati con il formato XML 
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre la conformit\u00e0 dei file di metadati locali con il formato XML 
 
 THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno rese effettive dopo il riavvio di Arbil.
 
