--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -149,15 +149,15 @@ NOTHING\ SELECTED\ TO\ COPY=Nessun elemento selezionato per la copia
 COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Impossibile impostare gli attributi per il nuovo campo. Vedi registro degli errori per maggiori dettagli
 ERROR\ WHILE\ SETTING\ ATTRIBUTES\ ON\ FIELD=Errore durante l'impostazione degli attributi del campo
 THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=Il nodo ''{0}'' non pu\u00f2 contenere un campo dello stesso tipo di ''{1}'' in ''{2}''
-COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile creare il campo. Vedi log degli errori per maggiori dettagli.
+COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile creare il campo. Vedi registro degli errori per maggiori dettagli.
 INSERT\ FIELD=Inserisci campo
 INSERT\ A\ NEW\ FIELD\ CONFIRM=Inserire un nuovo campo ''{0}'' nel nodo ''{1}''?\nLe modifiche in sospeso verranno salvate.\n
 HIGHLIGHT\ MATCHING\ ROWS=Evidenzia righe corrispondenti
-NO\ ROWS\ HAVE\ BEEN\ SELECTED=Non \u00e8 stata selezionata nessuna riga
+NO\ ROWS\ HAVE\ BEEN\ SELECTED=Nessuna riga \u00e8 stata selezionata
 DELETE\ FIELD=Elimina campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Eliminare %1$d esempi(o) del campo ''{1}''?
 CANNOT\ DELETE=Impossibile eliminare
-THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Questo campo non pu\u00f2 essere eliminato da uno o pi\u00f9 dei nodi visualizzati
+THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Questo campo non pu\u00f2 essere eliminato da uno, o pi\u00f9, dei nodi visualizzati
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Un tipo di visualizzazione a colonne con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
 SAVE\ COLUMN\ VIEW=Salva visualizzazione a colonne
 ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Inserisci nome per salvare questo tipo di visualizzazione a colonne come
@@ -165,30 +165,30 @@ EDITING\ CURRENT\ COLUMN\ VIEW=Modifica della visualizzazione a colonne corrente
 SHOW\ CHILD\ NODES=Mostra nodi figli
 SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Seleziona il tipo di nodo figlio da visualizzare
 FOUND\ %D\ MATCHING\ ROWS=Trovate %d righe corrispondenti
-THE\ ORIGIONAL\ FILE\ LOCATION\ CANNOT\ BE\ FOUND=Impossibile trovare la postazione originale del file
+THE\ ORIGIONAL\ FILE\ LOCATION\ CANNOT\ BE\ FOUND=Impossibile trovare l'ubicazione originale del file
 SAVE\ PENDING\ CHANGES?=Salvare modifiche in sospeso?
 ADD\ BULK\ RESOURCES=Aggiungi risorse in blocco
 ADD\ WORKING\ DIRECTORY=Aggiungi cartella di lavoro
-FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere dai preferiti, vedi log degli errori per maggiori dettagli.
+FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere dai preferiti, vedi registro degli errori per maggiori dettagli.
 TREE_VALIDATION=Convalida
 VALIDATION\ WILL\ BE\ AGAINST\ THE\ FILE\ ON\ DISK.\ SAVE\ CHANGES\ FIRST?=La convalida verr\u00e0 effettuata rispetto al file su disco. Salvare le modifiche prima di continuare?
 SEARCH\ REMOTE\ CORPUS=Cerca nel corpus remoto
 SEARCH=Cerca
-FAILED\ TO\ ADD\ LOCATION\ TO\ REMOTE\ CORPUS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere la postazione al corpus remoto. Vedi log degli errori per maggiori dettagli.
-ADD\ LOCATION=Aggiungi postazione
+FAILED\ TO\ ADD\ LOCATION\ TO\ REMOTE\ CORPUS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere l'ubicazione al corpus remoto. Vedi registro degli errori per maggiori dettagli.
+ADD\ LOCATION=Aggiungi ubicazione
 ENTER\ THE\ URL=Inserisci URL
-LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=La postazione dovrebbe essere un URI assoluto. Ci\u00f2 significa che dovrebbe iniziare con uno schema, per esempio "http://" oppure "file://"
-ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Nome file non valido. Vedi log degli errori per maggiori dettagli.
-WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=Attenzione: nessun file esistente nella postazione specificata!
+LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=L'ubicazione dovrebbe essere un URI assoluto. Ci\u00f2 significa che dovrebbe iniziare con uno schema, per esempio "http://" oppure "file://"
+ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Nome del file non valido. Vedi registro degli errori per maggiori dettagli.
+WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=Attenzione: nessun file esistente nell'ubicazione specificata!
 ERROR\ ADDING\ RESOURCE=Errore durante l'aggiunta di risorse
-COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere la risorsa ai metadati. Vedi log degli errori per maggiori dettagli.
+COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere la risorsa ai metadati. Vedi registro degli errori per maggiori dettagli.
 INVALID\ URI=URI non valido
-THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=L'URI inserito come postazione della risorsa non \u00e8 valido. Controllare nuovamente la postazione e riprovare.
-MANUAL\ RESOURCE\ LOCATION=Postazione manuale della risorsa 
+THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=L'URI inserito come ubicazione della risorsa non \u00e8 valido. Controllare nuovamente l'ubicazione e riprovare.
+MANUAL\ RESOURCE\ LOCATION=Ubicazione manuale della risorsa 
 ENTER\ THE\ RESOURCE\ URI\:=Inserisci URI della risorsa:
-COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=Impossibile determinare la postazione originale
+COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=Impossibile determinare l'ubicazione originale
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ NODE\ TYPE=Impossibile determinare il tipo originale di nodo
-RE\ IMPORT\ BRANCH=Importa di nuovo il ramo
+RE\ IMPORT\ BRANCH=Importa nuovamente il ramo
 ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Aggiungendo un nodo, le modifiche a "{0}" ancora in sospeso verranno salvate sul disco. Continuare?
 PROFILES_REFRESH\ LIST=Aggiorna elenco
 PAGE\ NOT\ FOUND=Pagina non trovata
@@ -210,25 +210,25 @@ ELIPSIS=...
 SUITABLE\ FAVOURITES=Preferiti appropriati
 CUSTOM\ PROFILE=Profilo personalizzato
 RESTART\ ARBIL=Riavvia Arbil
-THE\ PROFILES\ HAVE\ BEEN\ RE-DOWNLOADED.\ YOU\ NEED\ TO\ RESTART\ ARBIL\ IN\ ORDER\ TO\ APPLY\ ANY\ CHANGES.=I profili sono stati riscaricati. Riavviare Arbil per applicare le eventuali modifiche.
+THE\ PROFILES\ HAVE\ BEEN\ RE-DOWNLOADED.\ YOU\ NEED\ TO\ RESTART\ ARBIL\ IN\ ORDER\ TO\ APPLY\ ANY\ CHANGES.=I profili sono stati nuovamente scaricati. Riavviare Arbil per applicare le eventuali modifiche.
 PROFILES_LOADPROFILES=Carica profili
 PROFILES_LOADING,\ PLEASE\ WAIT...=Caricamento in corso, attendere prego...
 SELECT\ PROFILE=Seleziona profilo
 BROWSE\ FOR\ LOCAL\ PROFILES=Sfoglia profili locali
 PROFILES_ADD\ FILE=Aggiungi file
 ADD\ PROFILE=Aggiungi profilo
-ENTER\ THE\ PROFILE\ URL=Inserisci l'URL del profilo
+ENTER\ THE\ PROFILE\ URL=Inserisci URL del profilo
 PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Aggiungi un profilo URL alla lista
 PROFILES_ADD\ URL=Aggiungi URL
-PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=I profili selezionati saranno disponibili nel menu 'Aggiungi' del corpus locale. Per impostazione predefinita, soltanto i profili selezionati verranno scaricati per uso offline.\n
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=I profili selezionati saranno disponibili nel menu Aggiungi del corpus locale. Per impostazione predefinita, soltanto i profili selezionati verranno scaricati per uso offline.\n
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Carica solo profili selezionati per modifica manuale
 PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Scarica tutti i profili per uso offline (anche quelli non selezionati)
 PROFILES_DOWNLOAD\ ALL=Scarica tutto
-CLEAR\ CACHED\ COPIES\ AND\ RE-DOWNLOAD\ THE\ SELECTED\ PROFILES=Cancella copie nella cache e riscarica i profili selezionati
+CLEAR\ CACHED\ COPIES\ AND\ RE-DOWNLOAD\ THE\ SELECTED\ PROFILES=Cancella copie nella cache e scarica nuovamente i profili selezionati
 PROFILES_RELOAD\ SELECTION=Ricarica selezione
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Scarica i profili CMDI pi\u00f9 recenti
 TOTAL\ METADATA\ FILES\ FOUND\:\ =File di metadati trovati in totale:
-TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Errore di convalida dello schema (controlla conformit\u00e0 con XML per maggiori dettagli)
+TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Errore di convalida dello schema (controlla conformit\u00e0 XML per maggiori dettagli)
 TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponibile nel menu Preferiti
 TOOLTIP_UNSAVED\ CHANGES=Modifiche non salvate
 TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=Cronologia delle modifiche disponibile
@@ -238,7 +238,7 @@ TOOLTIP_LOCAL\ FILE\ (EDITABLE)=File locale (modificabile)
 TOOLTIP_RESOURCE\ FILE\ NOT\ FOUND=Impossibile trovare il file di risorse
 TOOLTIP_REMOTE\ FILE\ (READ\ ONLY)=File remoto (di sola lettura)
 TOOLTIP_COPIES\ ON\ SERVER\:\ ?=Copie sul server: ?
-TOOLTIP_COPIES\ ON\ LOCAL\ FILE\ SYSTEM\:\ {0}=Copie sul sistema di file locali: {0}
+TOOLTIP_COPIES\ ON\ LOCAL\ FILE\ SYSTEM\:\ {0}=Copie sul sistema di file locale: {0}
 TOOLTIP_COPIES\ IN\ CACHE\:\ {0}=Copie nella cache: {0}
 TOOLTIP_STATUS\:\ {0}=Stato: {0}
 TOOLTIP_TYPE\ CHECKER\ MESSAGE=Messaggio del type checker:\n"{0}"
@@ -256,11 +256,11 @@ TOOLTIP_FIELD\ HAS\ LANGUAGE\ ATTRIBUTE=Il campo presenta un attributo di lingua
 OPEN\ IN\ LONG\ FIELD\ EDITOR\ TO\ SET\ ATTRIBUTES=Apri con editor di testo lungo per impostare attributi
 FIELD\ HAS\ {0}\ ATTRIBUTE(S)=Il campo ha {0} attributo/i
 ATTRIBUTE\ OF\ {0}=Attributo di {0}
-REPLACE\ EXISTING\ LOCATION?=Sostuituire postazione esistente?
-NEW\ LOCATION=Nuova postazione
+REPLACE\ EXISTING\ LOCATION?=Sostuituire ubicazione esistente?
+NEW\ LOCATION=Nuova ubicazione
 REPLACE=Sostituisci
 OVERWRITE\ FILE?=Sostituire il file?
-THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=Il seguente file esiste gi\u00e0 nella postazione di destinazione:\n\n{0}\n\nSostituirlo?
+THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=Il seguente file esiste gi\u00e0 nell'ubicazione di destinazione:\n\n{0}\n\nSostituirlo?
 DETAILS=Dettagli
 PERFORMCOPY=Eseguire la copia
 DETAILS\ >\ >=Dettagli > >
@@ -279,7 +279,7 @@ IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limi
 IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rinomina i file di metadati (devono corrispondere ai nomi nell'albero del corpus locale)
 SHOW\ ERRORS\ IN\ TABLE=Mostra errori nella tabella
 RESOURCE\ COPY\ ERRORS=Errori nella copia della risorsa
-IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Se si seleziona la copia dei file di risorse, eventuali errori presenti nella copia dei file verranno riportati qui.
+IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Se si seleziona la copia dei file di risorse, eventuali errori presenti verranno riportati qui.
 VALIDATION\ ERRORS=Errori nella convalida
 WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Durante l'importazione o l'esportazione, i file di metadati verranno convalidati (per la conformit\u00e0 con lo schema XML) ed eventuali errori verranno riportati qui.
 PROCESS\ DETAILS=Dettagli processo
@@ -319,12 +319,12 @@ RECOVER\ HISTORY=Recupera cronologia
 COULD\ NOT\ COPY\ FILE\ WHEN\ RECOVERING\ FROM\ THE\ LAST\ HISTORY\ FILE.=Impossibile copiare il file durante il recupero dall'ultimo file della cronologia.
 {0}.\ HISTORY\ MAY\ BE\ BROKEN\ FOR\ {1}={0}: la cronologia potrebbe essere interrotta per {1}
 SAVE=Salva
-ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante il salvataggio delle modifiche sul disco, vedi il log degli errori nel menu Guida per maggiori informazioni.
+ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante il salvataggio delle modifiche sul disco, vedi il registro degli errori nel menu Guida per maggiori informazioni.
 UNKNOWN\ ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Errore sconosciuto durante la creazione del nodo di risorse per l''URI: {0}
 ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Errore durante la creazione del nodo di risorse per l''URI: {0}
-COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile eliminare i nodi a causa di un errore durante il salvataggio della cronologia del nodo. Vedi log degli errori per maggiori dettagli.
+COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile eliminare i nodi a causa di un errore durante il salvataggio della cronologia del nodo. Vedi registro degli errori per maggiori dettagli.
 ERROR\ WHILE\ MOVING\ NODES=Errore durante lo spostamento dei nodi
-COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile spostare i nodi a causa di un errore durante il salvataggio della cronologia del nodo. Vedi log degli errori per maggiori dettagli.
+COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile spostare i nodi a causa di un errore durante il salvataggio della cronologia del nodo. Vedi registro degli errori per maggiori dettagli.
 {0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} esiste gi\u00e0 in {1} e non verr\u00e0 aggiunto nuovamente
 CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=Impossibile collegare o spostare un nodo dentro se stesso
 LOADING\ ERROR=Errore durante il caricamento
@@ -335,7 +335,7 @@ THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Il file di destinazione non \u00e8 ne
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Impossibile incollare i sottonodi della sessione in un corpus
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Il file del nodo di destinazione non esiste
 COPYING\ WITH\ UNSAVED\ CHANGES=Copia con modifiche non salvate in corso
-SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Alcuni dei nodi da copiare contengono modifiche non salvate.\nSe non salvate, tali modifiche non verranno visualizzate nei nodi risultanti. Continuare comunque?
+SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Alcuni dei nodi da copiare contengono modifiche in sospeso.\nSe non salvate, tali modifiche non verranno visualizzate nei nodi risultanti. Continuare comunque?
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=La postazione esiste gi\u00e0 e non verr\u00e0 aggiunta nuovamente
 DELETE=Elimina
 DELETE\ {0}\ NODES?=Eliminare {0} nodi?
@@ -344,13 +344,13 @@ DELETE\ THE\ NODE\ {0}?=Eliminare il nodo "{0}"?
 DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Eliminare %d nodi dal nodo padre ''{0}''?\nEventuali modifiche in sospeso verranno salvate.\n
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Eliminare il nodo ''{0}'' dal nodo padre ''{1}''?\nEventuali modifiche in sospeso verranno salvate.\n
 CANNOT\ COPY\ {0}\ TO\ {1}=Impossibile copiare ''{0}'' in ''{1}''
-FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Trovati altri risultatii, qui sono visualizzati soltanto i primi {0} risultati
+FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Trovati altri risultati, qui sono visualizzati soltanto i primi {0} risultati
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Impossibile cercare "{0}" perch\u00e9 non ha un handle nell''archivio
 DELETE\ FROM\ PARENT=Elimina da nodo padre
 %D\ NODES\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT\n=Impossibile eliminare %d nodi perch\u00e9 senza nodo padre
 COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=Impossibile eliminare il nodo perch\u00e9 senza nodo padre
 EXPORT_TO\:\ =A:
 EXPORT_FROM\:\ =Da:
-<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione di I/O durante la lettura del contenuto della guida</strong></p>
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione di I/O durante la lettura del contenuto della Guida</strong></p>
 XSDCHECKER=XSD checker 
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Lingue da inserire nell'elenco a tendina del campo Descrizione (IMDI)
