checked also the Spanish translation

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -17,11 +17,11 @@
 #
 
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=Insertar ubicaci\u00f3n del recurso manual
+INSERT\ MANUAL\ RESOURCE\ LOCATION=Insertar ubicaci\u00f3n del recurso manualmente
 
-RE-IMPORT\ THIS\ BRANCH=Reimportar esta rama
+RE-IMPORT\ THIS\ BRANCH=Volver a importar esta rama
 
-RE-IMPORT\ THIS\ SESSION=Reimportar esta sesi\u00f3n
+RE-IMPORT\ THIS\ SESSION=Volver a importar esta sesi\u00f3n
 
 IMPORT\ BRANCH=Importar rama
 
@@ -95,7 +95,7 @@ CLEAR\ CELL\ HIGHLIGHT=Borrar resaltado de las celdas
 
 HIGHLIGHT\ MATCHING\ CELLS=Resaltar celdas coincidentes
 
-COPY\ CELL\ TO\ WHOLE\ COLUMN=Copiar celda en toda la columna
+COPY\ CELL\ TO\ WHOLE\ COLUMN=Copiar celda en todas las filas de la columna
 
 CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=No se puede copiar este tipo de campo
 
@@ -159,9 +159,9 @@ SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostrar idioma en el nombre de la columna
 
 TRACK\ TABLE\ SELECTION\ IN\ TREE=Seguir selecci\u00f3n de la tabla en el \u00e1rbol
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Esta opci\u00f3n comprueba la conformidad de todos los archivos locales de metadatos con XML cada vez que \u00e9stos son importados. Si el archivo de metadatos no se valida con el esquema, estar\u00e1 resaltado de rojo en el \u00e1rbol.
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Esta opci\u00f3n comprueba la conformidad de todos los archivos de metadatos locales con XML cada vez que \u00e9stos son importados. Si el archivo de metadatos no se valida con el esquema, estar\u00e1 resaltado de rojo en el \u00e1rbol.
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Comprobar siempre la conformidad de los archivos locales de metadatos con XML
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Comprobar siempre la conformidad de los archivos de metadatos locales con XML
 
 THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=El cambio de configuraci\u00f3n ser\u00e1 efectivo al reiniciar Arbil.
 
@@ -288,7 +288,7 @@ LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La consola del registro no est\u00e1 di
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Si se selecciona el \u00e1rbol del corpus, \u00e9ste seguir\u00e1 la estructura de los documentos CMDI sin combinar ni compactar nada
 LANGUAGE\ SELECTION=Selecci\u00f3n del idioma
 PLEASE\ RESTART\ THE\ APPLICATION\ FOR\ THE\ LANGUAGE\ SELECTION\ TO\ BECOME\ VISIBLE=Por favor reiniciar la aplicaci\u00f3n para que la selecci\u00f3n del idioma sea visible
-PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Por favor seleccionar el idioma favorito
+PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Por favor seleccionar el idioma deseado
 SELECT\ LANGUAGE=Seleccionar el idioma
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Mostrar estructura XML verbatim en el \u00e1rbol para CMDI
 SYSTEM\ DEFAULT=Predeterminado del sistema
