--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
@@ -20,7 +20,7 @@ THE\ METADATA\ FILE\ COULD\ NOT\ BE\ OPENED=No se pudo abrir el archivo de metad
 CMDI\ SCHEMA\ LOCATION=Ubicaci\u00f3n del esquema CMDI
 COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=No se pudo encontrar el URL del esquema, algunos nodos no ser\u00e1n visualizados correctamente.
 LOAD\ IMDI\ FILES=Cargar archivos IMDI
-A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Se ha encontrado un atributo DOM ID en uno o m\u00e1s de los archivos, \u00e9stos deber\u00e1n ser guardados para corregir el problema.
+A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Se ha encontrado un atributo DOM ID en uno o m\u00e1s de los archivos, se deber\u00e1 guardar estos archivos para corregir el problema.
 INSERT\ FROM\ TEMPLATE=Insertar desde plantilla
 ERROR\ READING\ TEMPLATE=Error al leer la plantilla
 ADD\ FROM\ TEMPLATE=Agregar desde plantilla
@@ -35,7 +35,7 @@ ADD\ NODE=Agregar nodo
 NEW\ RESOURCE\ IN\ %S=Nuevo recurso en {0}
 NEW\ RESOURCES\ IN\ %S=Nuevos recursos en {0}
 #{0} is a mimetype string (which represents the exact file type of a resource, see https://en.wikipedia.org/wiki/Mimetype)
-THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=No hay ning\u00fan vocabulario controlado para los recursos escritos o los archivos multimediales que coincidan con "{0}".
+THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=No hay ning\u00fan vocabulario controlado para los recursos escritos o los archivos multimediales que coincida con "{0}".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=El archivo podr\u00eda ser no archivable. Se puede continuar, de todas formas, seleccionando el tipo de recurso manualmente.
 DO\ YOU\ WANT\ TO\ PROCEED?=\u00bfSe desea continuar?
 WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=\u00a1ADVERTENCIA: Esto no garantiza que los datos se puedan cargar en el servidor del corpus!
@@ -61,7 +61,7 @@ NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Ninguna descripci\
 #{0} is the filename of the template
 COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =No se pudo leer el archivo de plantilla requerido: {0}. Ver registro de errores para m\u00e1s detalles
 LOAD\ CLARIN\ TEMPLATE=Cargar plantilla Clarin
-FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=No se pudo remover el proxy recurso con id {0}
+FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=No se pudo remover el proxy del recurso con id {0}
 UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relaci\u00f3n inesperada entre la ruta de acceso de origen y la de destino. Ver registro de errores para m\u00e1s detalles.
 INSERT\ NODE=Insertar nodo
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA=No se pudo leer el esquema XML
@@ -73,14 +73,14 @@ ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil de
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error al guardar la configuraci\u00f3n como
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=No se pudo mover los archivos contenidos en el 'Corpus local' en la ubicaci\u00f3n requerida.\nSe puede anular la operaci\u00f3n (no habr\u00e1 ning\u00fan cambio), o modificar el directorio de trabajo.\nEn el segundo caso, los archivos corpus y los archivos sesi\u00f3n contenidos en el 'Corpus local' \nse desplazar\u00e1n al \u00e1rbol 'Directorios de trabajo' y deber\u00e1n importarse manualmente.\n\u00bfModificar de todas formas el directorio de trabajo?
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=No se pudieron mover los archivos contenidos en el Corpus local en la ubicaci\u00f3n requerida.\nSe puede anular la operaci\u00f3n (no habr\u00e1 ning\u00fan cambio), o modificar el directorio de trabajo.\nEn el segundo caso, los archivos corpus y los archivos sesi\u00f3n contenidos en el Corpus local \nse desplazar\u00e1n al \u00e1rbol Directorios de trabajo y deber\u00e1n importarse manualmente.\n\u00bfModificar de todas formas el directorio de trabajo?
 ERROR\ SAVING\ CONFIGURATION=Error al guardar la configuraci\u00f3n
 #{0} is the filename the configuration should be written to
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=No se pudo escribir la nueva configuraci\u00f3n en {0}
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=No se pudo escribir en el directorio de trabajo. \u00a1Comprobaci\u00f3n de actualizaciones err\u00f3nea!
 THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Ha ocurrido un error durante la actualizaci\u00f3n de la aplicaci\u00f3n.\nActualizar con el enlace de descarga del sitio web.
 THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Hay una nueva versi\u00f3n disponible.\nActualizar con el enlace de descarga del sitio web.
-THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Ha ocurrido un error al reiniciar la aplicaci\u00f3n.\nLa actualizaci\u00f3n tendr\u00e1 efecto despu\u00e9s del pr\u00f3ximo reinicio de la aplicaci\u00f3n.\n
+THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Ha ocurrido un error al reiniciar la aplicaci\u00f3n.\nLa actualizaci\u00f3n tendr\u00e1 efecto cuando la aplicaci\u00f3n se reinicie otra vez.\n
 ERROR=Error
 There\ is\ a\ new\ version\ available=Hay una nueva versi\u00f3n disponible\n\u00bfSe desea actualizar ahora?
 #Journal is a 'logbook' that tracks all actions taken in Arbil
