--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -343,7 +343,7 @@ COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=No se pudo eliminar el no
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=La ubicaci\u00f3n ya existe y no se puede agregar otra vez
 DELETE=Eliminar
 DELETE\ {0}\ NODES?=\u00bfEliminar {0} nodos?
-THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=Se guardar\u00e1n en el disco inlcuso los posibles cambios pendientes.
+THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=Se guardar\u00e1n en el disco incluso los posibles cambios pendientes.
 DELETE\ THE\ NODE\ {0}?=\u00bfEliminar el nodo "{0}"?
 DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=\u00bfEliminar %d nodos de su nodo primario ''{0}''?\nSe guardar\u00e1n los cambios pendientes.\n
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=\u00bfEliminar el nodo ''{0}'' de su nodo primario ''{1}''?\nSe guardar\u00e1n los cambios pendientes.\n
@@ -351,6 +351,6 @@ CANNOT\ COPY\ {0}\ TO\ {1}=No se puede copiar ''{0}'' en ''{1}''
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Se han encontrado m\u00e1s resultados, aqu\u00ed se ven s\u00f3lo los primeros {0} resultados
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=No se puede buscar "{0}" porque no tiene un handle con el archivo
 DELETE\ FROM\ PARENT=Eliminar de nodo primario
-<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n de I/O al leer el contenido de la gu\u00eda</strong></p>
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n de I/O al leer el contenido de la Gu\u00eda</strong></p>
 XSDCHECKER=Chequeador de XSD
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo Descripci\u00f3n (IMDI)
