--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -47,7 +47,7 @@ SELECTION=Selecci\u00f3n
 DIRECTORIES=Directorios
 METADATA\ FILES=Archivos de metadatos
 THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=El directorio de exportaci\u00f3n seleccionado no est\u00e1 vac\u00edo. Al exportar, habr\u00e1 que \nelegir entre reemplazar o crear duplicados de los posibles archivos presentes.\n\u00bfContinuar?
-THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=El directorio de exportaci\u00f3n\n"{0}"\nno existe.\nSeleccionar o crear un directorio.
+THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=El directorio de exportaci\u00f3n\n"{0}"\nno existe.\nSeleccionar un directorio o crear otro nuevo.
 \ DESTINATION\ DIRECTORY=Directorio de destino
 SAVE\ CHANGES=Guardar los cambios
 THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Hay cambios sin guardar.\n\u00bfGuardar ahora?
@@ -56,7 +56,7 @@ LICENSE=Licencia
 ABOUT\ {0}=Acerca de {0}
 CLOSE=Cerrar
 DISPLAY\ LICENSE=Mostrar licencia
-ABOUTBOXTEXT=Archive Builder\nUna herramienta local para la organizaci\u00f3n de datos ling\u00fc\u00edsticos.\nMax Planck Institute for Psycholinguistics\n\nAplicaci\u00f3n dise\u00f1ada y desarrollada por Peter Withers\nMantenimiento y extensiones por Peter Withers & Twan Goosen\nArbil utiliza tambi\u00e9n componentes de IMDI API y de Lamus Type Checker\n\nVersi\u00f3n: {0} {1} {2}\n{3}\nFecha de compilaci\u00f3n: {4}\n\nVersi\u00f3n Java: {5}\nProveedor: {6}\nJVM: {7} {8}\nSistema operativo: {9} {10} {11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nLa licencia da Arbil ha sido concedida por la GNU General Public License versi\u00f3n 2.\nSeleccionar Mostrar licencia para ver la versi\u00f3n completa de esta licencia.
+ABOUTBOXTEXT=Archive Builder\nUna herramienta local para la organizaci\u00f3n de datos ling\u00fc\u00edsticos.\nMax Planck Institute for Psycholinguistics\n\nAplicaci\u00f3n dise\u00f1ada y desarrollada por Peter Withers\nMantenimiento y extensiones por Peter Withers & Twan Goosen\nArbil utiliza tambi\u00e9n componentes de IMDI API y de Lamus Type Checker\n\nVersi\u00f3n: {0} {1} {2}\n{3}\nFecha de compilaci\u00f3n: {4}\n\nVersi\u00f3n Java: {5}\nProveedor: {6}\nJVM: {7} {8}\nSistema operativo: {9} {10} {11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil cuenta con la GNU General Public License versi\u00f3n 2.\nSeleccionar Mostrar licencia para ver la versi\u00f3n completa de esta \u00faltima.
 SAVE\ TO\ DISK?=\u00bfGuardar en el disco?
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=No se pudieron cargar {0} ubicaciones. Ver registro de errores para m\u00e1s detalles.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Todos los cambios pendientes a {0} se guardar\u00e1n en el disco. \u00bfContinuar?
@@ -116,13 +116,13 @@ SETUP_NO\ PROFILES\ SELECTED=Ning\u00fan perfil seleccionado
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha seleccionado ning\u00fan perfil. \u00bfEst\u00e1 seguro de querer continuar?
 SETUP_CLARIN\ PROFILES=Perfiles Clarin
 CANCEL\ WIZARD=Cancelar asistente
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n 'ocultar campos')
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n ocultar campos)
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Ancho de la columna {0} no v\u00e1lido
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Ancho columna
 FIELD_VIEW_TABLE_HIDE=Ocultar
 FIELD_VIEW_TABLE_SHOW\ ONLY=Mostrar s\u00f3lo
 FIELD_VIEW_TABLE_COLUMN\ NAME=Nombre de columna
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo cuando 'Mostrar s\u00f3lo' no ha sido seleccionada)
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo cuando Mostrar s\u00f3lo no ha sido seleccionada)
 ARBIL\ LOG\ CONSOLE=Consola del registro de Arbil
 SEARCH_STOP=detener
 SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=buscado: {0}/{1} encontrado {2}
@@ -136,11 +136,11 @@ NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=Ning\u00fan campo coincide c
 NO\ DATA\ TO\ PASTE.=Ning\u00fan dato para pegar.
 CONTINUE?=\u00bfContinuar?
 THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=Al pegar, se eliminar\u00e1 el contenido de {0} campos.
-TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Dos campos con el mismo nombre deben pegarse en esta tabla,\nuno de los dos sobreescribir\u00e1 el otro.
+TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Dos campos con el mismo nombre deben pegarse en esta tabla,\nuno de los dos sobrescribir\u00e1 el otro.
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=El n\u00famero de columnas en los datos para pegar es incoherente.\nLos datos pegados podr\u00edan ser incorrectos.\n
 INCORRECT\ DATA\ TO\ PASTE=Datos para pegar incorrectos.\nLos datos se deben copiar desde una tabla donde hay un s\u00f3lo nodo, \no bien seleccionando celdas individuales en la tabla.
 PASTE=Pegar
-FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=Se sobreescribir\u00e1n %d campos con el valor \u00fanico en el portapapeles.\n\u00bfContinuar?
+FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=Se sobrescribir\u00e1n %d campos con el valor \u00fanico en el portapapeles.\n\u00bfContinuar?
 SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=mostrar men\u00fa encabezado para columna {0}
 NO\ ROWS\ SELECTED=Ninguna fila seleccionada
 PASTE\ INTO\ TABLE=Pegar en la tabla
@@ -157,7 +157,7 @@ NO\ ROWS\ HAVE\ BEEN\ SELECTED=Ninguna fila ha sido seleccionada
 DELETE\ FIELD=Eliminar campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar %1$d ejemplo(s) del campo ''{1}''?
 CANNOT\ DELETE=No se puede eliminar
-THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Este campo no se puede eliminar de uno o m\u00e1s de los nodos visualizados
+THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Este campo no se puede eliminar de uno, o m\u00e1s, de los nodos visualizados
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Una vista de columna con el mismo nombre ya existe, no se ha guardado nada
 SAVE\ COLUMN\ VIEW=Guardar vista de columna
 ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Insertar un nombre para guardar esta vista de columna como
@@ -181,7 +181,7 @@ LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=La ubicaci\u00f3n deber\u00eda ser un UR
 ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Nombre de archivo no v\u00e1lido. Ver registro de errores para m\u00e1s detalles.
 WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=\u00a1Advertencia: no existe ning\u00fan archivo en la ubicaci\u00f3n especificada!
 ERROR\ ADDING\ RESOURCE=Error al agregar recursos 
-COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudiereon agregar recursos a los metadatos. Ver registro de errores para m\u00e1s detalles.
+COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudieron agregar recursos a los metadatos. Ver registro de errores para m\u00e1s detalles.
 INVALID\ URI=URI no v\u00e1lido
 THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=El URI utilizado come ubicaci\u00f3n del recurso no es v\u00e1lido. Comprobar la ubicaci\u00f3n y volver a intentarlo.
 MANUAL\ RESOURCE\ LOCATION=Ubicaci\u00f3n manual del recurso
@@ -200,7 +200,7 @@ OVERVIEW=Informaci\u00f3n general
 SHORTCUT\ KEYS=Teclas de atajo
 FIND\:=Buscar:
 REPLACE\ SELECTED=Reemplazar elementos seleccionados
-FIND\ NEXT=Buscar sigiuente
+FIND\ NEXT=Buscar siguiente
 REGULAR\ EXPRESSION=Expresi\u00f3n regular
 <ENTER\ REPLACEMENT\ TEXT>=<insertar texto de sustituci\u00f3n>
 <ENTER\ FIND\ TEXT>=<insertar texto para buscar>
@@ -259,8 +259,8 @@ ATTRIBUTE\ OF\ {0}=Atributo de {0}
 REPLACE\ EXISTING\ LOCATION?=\u00bfReemplazar ubicaci\u00f3n existente?
 NEW\ LOCATION=Nueva ubicaci\u00f3n
 REPLACE=Reemplazar
-OVERWRITE\ FILE?=\u00bfSobreescribir archivo?
-THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=El siguiente archivo ya existe en la ubicaci\u00f3n de destino:\n\n{0}\n\n\u00bfSobreescribir?
+OVERWRITE\ FILE?=\u00bfSobrescribir archivo?
+THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=El siguiente archivo ya existe en la ubicaci\u00f3n de destino:\n\n{0}\n\n\u00bfSobrescribir?
 DETAILS=Detalles
 PERFORMCOPY=Copiar
 DETAILS\ >\ >=Detalles > >
@@ -276,12 +276,12 @@ IMPORT_EXPORT_START=Iniciar
 IMPORT_EXPORT_STOP=Detener
 IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Autenticaci\u00f3n Shibboleth con m\u00e9todo SURFnet
 IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limitar caracteres en nombres de archivos (formato apto para LAMUS)
-IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Cambiar nombre de archivos de metadatos (deben corresponder a los nombres en el \u00e1rbol del corpus local)
+IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Cambiar nombre a los archivos de metadatos (deben corresponder a los nombres en el \u00e1rbol del corpus local)
 EXPORT_TO\:\ =A:
 EXPORT_FROM\:\ =De:
 SHOW\ ERRORS\ IN\ TABLE=Mostrar errores en la tabla
 RESOURCE\ COPY\ ERRORS=Errores en la copia de recursos 
-IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Si se selecciona la copia de archivos de recursos, los posibles errores en la copia de los archivos se notificar\u00e1n aqu\u00ed.
+IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Si se selecciona la copia de archivos de recursos, los errores que puedan ocurrir se notificar\u00e1n aqu\u00ed.
 VALIDATION\ ERRORS=Errores en la validaci\u00f3n
 WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Al ser importados o exportados, los archivos de metadatos ser\u00e1n validados (para la conformidad con el esquema XML) y los posibles errores se notificar\u00e1n aqu\u00ed.
 PROCESS\ DETAILS=Detalles del proceso
@@ -343,7 +343,7 @@ COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=No se pudo eliminar el no
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=La ubicaci\u00f3n ya existe y no se puede agregar otra vez
 DELETE=Eliminar
 DELETE\ {0}\ NODES?=\u00bfEliminar {0} nodos?
-THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=Se guardar\u00e1n en el disco inlcuso los posibles cambios pendientes.
+THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=Se guardar\u00e1n en el disco incluso los posibles cambios pendientes.
 DELETE\ THE\ NODE\ {0}?=\u00bfEliminar el nodo "{0}"?
 DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=\u00bfEliminar %d nodos de su nodo primario ''{0}''?\nSe guardar\u00e1n los cambios pendientes.\n
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=\u00bfEliminar el nodo ''{0}'' de su nodo primario ''{1}''?\nSe guardar\u00e1n los cambios pendientes.\n
@@ -351,6 +351,6 @@ CANNOT\ COPY\ {0}\ TO\ {1}=No se puede copiar ''{0}'' en ''{1}''
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Se han encontrado m\u00e1s resultados, aqu\u00ed se ven s\u00f3lo los primeros {0} resultados
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=No se puede buscar "{0}" porque no tiene un handle con el archivo
 DELETE\ FROM\ PARENT=Eliminar de nodo primario
-<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n de I/O al leer el contenido de la gu\u00eda</strong></p>
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n de I/O al leer el contenido de la Gu\u00eda</strong></p>
 XSDCHECKER=Chequeador de XSD
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo Descripci\u00f3n (IMDI)
