improve mistake in one of the arbil widgets

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -165,7 +165,7 @@ HIGHLIGHT\ MATCHING\ ROWS=Highlight Matching Rows
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=No rows have been selected
 DELETE\ FIELD=Delete field
 #$1$d is number of instances, {1} is the name of the field
-DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Delete %1$d instance(s) of the field ''{1}''?
+DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Delete {0} instance(s) of the field ''{1}''?
 CANNOT\ DELETE=Cannot delete
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=This field cannot be deleted from one or more of the shown nodes\n\n
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=A Column View with the same name already exists, nothing saved 
